--- a/TaapiLibrary.csproj
+++ b/TaapiLibrary.csproj
@@ -4,11 +4,19 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <PackageTags>taapi</PackageTags>
+	  <PackageId>Grumson.Utilities.Taapi</PackageId>
+	  <Version>1.0.1</Version>
+	  <FileVersion>1.0.1</FileVersion>
+	  <Authors>Dejan Grum</Authors>
+	  <Company>Grumson</Company>
+	  <Description>Taapi library</Description>
+    <PackageTags>taapi, crypto, trading, bot</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	  <None Include="README.md" Pack="true" PackagePath="\"/>
+	  <None Include="LICENSE.txt" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
 </Project>
