Refactor and enhance TaapiClient library
Refactored various classes and interfaces to improve code readability and maintainability. Enhanced the TaapiClient class with new methods and XML documentation. Updated the README.md with detailed documentation and examples. Introduced new indicator types and properties, and deprecated outdated methods. Incremented the library version to 1.0.4.

- Made `Indicator` property read-only in multiple classes.
- Changed `Backtrack` property type from `string?` to `int?`.
- Added new indicators to `TaapiIndicatorType` enum.
- Updated `TaapiClient` with new methods and improved error handling.
- Deprecated `PostBulkIndicatorsAsync` method.
- Updated project version to 1.0.4.
- Added new images for bulk request and response.
- Enhanced README.md with comprehensive documentation and examples.

--- a/TaapiLibrary.csproj
+++ b/TaapiLibrary.csproj
@@ -5,8 +5,8 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<PackageId>Grumson.Utilities.Taapi</PackageId>
-		<Version>1.0.3</Version>
-		<FileVersion>1.0.3</FileVersion>
+		<Version>1.0.4</Version>
+		<FileVersion>1.0.4</FileVersion>
 		<Authors>Dejan Grum</Authors>
 		<Company>Grumson</Company>
 		<Description>Taapi library</Description>
@@ -29,6 +29,15 @@
 	<ItemGroup>
 		<None Include="LICENSE.txt" Pack="true" PackagePath="" />
 		<None Include="README.md" Pack="true" PackagePath="" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="BulkRequest.png">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="BulkResponse.png">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 
