Add images to project and configure output settings
Added `BulkRequest.png` and `BulkResponse.png` to `TaapiLibrary.csproj` with `Pack="true"`. Configured `BulkRequest.png` to copy to output directory with `PreserveNewest`.

--- a/TaapiLibrary.csproj
+++ b/TaapiLibrary.csproj
@@ -29,6 +29,8 @@
 	<ItemGroup>
 		<None Include="LICENSE.txt" Pack="true" PackagePath="" />
 		<None Include="README.md" Pack="true" PackagePath="" />
+		<None Include="BulkRequest.png" Pack="true" PackagePath="" />
+		<None Include="BulkResponse.png" Pack="true" PackagePath="" />
 	</ItemGroup>
 
 	<ItemGroup>
