--- a/TaapiLibrary.csproj
+++ b/TaapiLibrary.csproj
@@ -5,12 +5,12 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<PackageId>Grumson.Utilities.Taapi</PackageId>
-		<Version>1.0.5</Version>
-		<FileVersion>1.0.5</FileVersion>
+		<Version>1.0.6</Version>
+		<FileVersion>1.0.6</FileVersion>
 		<Authors>Dejan Grum</Authors>
 		<Company>Grumson</Company>
 		<Description>Taapi library</Description>
-		<PackageTags>taapi, crypto, trading, bot</PackageTags>
+		<PackageTags>taapi, crypto, trading, bot, signals, indicators</PackageTags>
 		<!-- Dodajte URL vašega projekta tukaj -->
 		<PackageProjectUrl>https://github.com/grumson/TaapiLibrary.git</PackageProjectUrl>
 		<!-- Dodajte URL vašega repozitorija tukaj -->
