--- a/TaapiLibrary.csproj
+++ b/TaapiLibrary.csproj
@@ -22,6 +22,19 @@
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
+	<PropertyGroup>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<NoWarn>$(NoWarn);1591</NoWarn>
+		<!-- Optional: Suppress warnings for missing XML comments -->
+	</PropertyGroup>
+
+	<ItemGroup>
+		<None Update="bin\$(Configuration)\$(TargetFramework)\*.xml">
+			<Pack>true</Pack>
+			<PackagePath>lib\$(TargetFramework)\</PackagePath>
+		</None>
+	</ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
